--- a/ckan/templates/package/snippets/resource_view.html
+++ b/ckan/templates/package/snippets/resource_view.html
@@ -1,14 +1,32 @@
 {% import 'macros/form.html' as form %}
 
 <div id="view-{{ resource_view['id'] }}" class="resource-view" data-id="{{ resource_view['id'] }}" data-title="{{ resource_view['title'] }}" data-description="{{ resource_view['descripion'] }}">
+<div class="actions">
+          
+          <ul>
+            
+            
+              <li>
   <a class="btn pull-right"
      href="#embed-{{ resource_view['id'] }}"
      data-module="resource-view-embed"
      data-module-id="{{ resource_view['id'] }}"
      data-module-url="{{ h.url('resource_view', id=package['name'], resource_id=resource['id'], view_id=resource_view['id'], qualified=True) }}">
     <i class="icon-code"></i>
-    {{ _("Embed") }}
+    {{ _("Embed this View") }}
+  </a></li><li>
+  <a class="btn pull-right" target="_blank"
+     href="{{ h.url('resource_view', id=package['name'], resource_id=resource['id'], view_id=resource_view['id'], qualified=True) }}">
+    <i class="icon-external-link"></i>
+    {{ _("View Full Screen") }}
   </a>
+              </li>
+            
+            
+            
+          </ul>
+          
+        </div>
   <p class="desc">{{ resource_view['description'] }}</p>
   <div class="m-top ckanext-datapreview">
     {% if not to_preview and h.resource_view_is_filterable(resource_view) %}
