- Facet list template fix for published/unpublished datasets.

--- a/ckan/templates/snippets/facet_list.html
+++ b/ckan/templates/snippets/facet_list.html
@@ -61,6 +61,13 @@ within_tertiary
               <nav>
                 <ul class="{{ nav_class or 'unstyled nav nav-simple nav-facet' }}">
                   {% for item in items %}
+                    {% if item.name == "Published datasets" %}
+                      {% set itemName = "" %}
+                    {% elif item.name == "Unpublished datasets" %}
+                      {% set itemName = "True" %}
+                    {% else %}
+                      {% set itemName = item.name %}
+                    {% endif %}
                     {% set href = h.remove_url_param(name, item.name, extras=extras, alternative_url=alternative_url) if item.active else h.add_url_param(new_params={name: item.name}, extras=extras, alternative_url=alternative_url) %}
                     {% set label = label_function(item) if label_function else item.display_name %}
                     {% set label_truncated = h.truncate(label, 22) if not label_function else label %}
